# FDTD_Software

./: .gitignore  CMakeLists.txt  LICENSE  requirements.txt
docs/: tips.md
input/: analysis.json  grid_config.json  materials.json  parameters.h
src/: main.cpp
tests/: inputTests.cpp
